--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a img {
 .name {z-index: 88888;}
 
 #illustration {
-  background-color: #4C5364;
+  background-color: #495266;
 /*  background-color: #495266; gray blue*/
 /*  background-color: #464C57; light gray blue*/
   width: 100%;
@@ -78,21 +78,12 @@ a img {
 }
 
 #about a {
-  color: #d1d6dc;
+  color: #3a92c8;
   text-decoration: none;
 }
 
 #about a:hover {
   text-decoration: underline;
-}
-
-#nav {
-  background-color: #fafafa;
-  height:60px;
-  font-family: 'roboto', sans-serif;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  text-align: center;
 }
 
 #about {
@@ -181,10 +172,6 @@ span.answer {
   border-radius: 8px;
 }
 
-.design {
-  border-color: #c12758;
-}
-
 #resume {
   background-color: #ddd;
   height: auto;
@@ -237,10 +224,6 @@ img.icon:hover {
   line-height: 40px;
 }
 
-.row {
-  clear: both;
-}
-
 .portfolio-thumb {
   width: 45%;
   margin: 20px;
@@ -255,8 +238,7 @@ img.icon:hover {
 
 .portfolio-thumb p {
   font-size: 14px;
-  padding: 25px;
-  padding-top: 0px;
+  padding: 0px 25px 25px;
   text-align: left;
   line-height: 24px;
 }
@@ -281,15 +263,6 @@ img.icon:hover {
 }
 
 /*TOC*/
-.container {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-  position: absolute;
-  top:0px;
-  right: 0px;
-  padding: 70px 50px 0 10px;
-}
 
 .toc-holder {
   text-align: right;
@@ -362,20 +335,12 @@ a.toc-link:hover {
   transition: transform .4s ease;
 }
 
-.toc-link span.rotate {
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-
 .toc {
   position: absolute;
   z-index: 10;
   text-align: center;
   opacity: 0.5;
-  right:0px;
+  right:0;
   background: #fafafa;
   width: auto;
   padding-top: 60px;
@@ -389,7 +354,7 @@ a.toc-link:hover {
 }
 
 ul.toc {
-  -webkit-padding-start: 0px;
+  -webkit-padding-start: 0;
 }
 
 .toc-h1 a {
@@ -399,24 +364,6 @@ ul.toc {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.2em;
   text-transform: uppercase;
-}
-
-.closed {
-  display: block;
-}
-
-.top-link {
-  display: block;
-  text-decoration: none;
-  position: fixed;
-  bottom: 0;
-  right: 2%;
-  padding: 8px 16px 0 16px;
-  height: 30px;
-  font-size: 14px;
-  -webkit-border-radius: 10px 10px 0 0;
-  -moz-border-radius: 10px 10px 0 0;
-  border-radius: 10px 10px 0 0;
 }
 
 @media screen and (max-width:860px) {
@@ -540,7 +487,7 @@ ul.toc {
   }
 
   #illustration {
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 
   #illustration img {
@@ -603,7 +550,7 @@ ul.toc {
   }
 
   #about .inner {
-    padding: 0px 10px 0px 10px;
+    padding: 0 10px 0 10px;
   }
   #code, #console {
     height:auto;
